# tips_project

./: label_encoder.pkl  main.py  pipeline.py  pyproject.toml  scaler.pkl  tips_model.pkl
.zen/: config.yaml
steps/: loader.py  preparation.py  training.py
utils/: data_loader.py  data_preparation.py  model_training.py
